--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,5 @@ services:
   - type: worker
     name: ai-trainer
     runtime: python
-    buildCommand: "pip install -r requirements.txt&&python3 train-and-generate.py"
+    buildCommand: "./build.sh"
     autoDeploy: true
