rename all occurances of AIServererver to AIServer.

--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: ai-trainer
     runtime: python3
     buildCommand: "./build.sh"
-    startCommand: "cd AIServererver;python3 -m gunicorn AIServer.asgi:application -k uvicorn.workers.UvicornWorker"
+    startCommand: "cd AIServer;python3 -m gunicorn AIServer.asgi:application -k uvicorn.workers.UvicornWorker"
     autoDeploy: true
